package de.andrena.codingaider.command

data class FileData(
    val filePath: String,
    val isReadOnly: Boolean
)


